fix(ui5-label): wrapping now works in when used in CustomListItem
Fixes #3324

--- a/packages/main/src/themes/Label.css
+++ b/packages/main/src/themes/Label.css
@@ -13,13 +13,16 @@
 
 .ui5-label-root {
 	width: 100%;
+	cursor: inherit;
+}
+
+:host([wrapping-type="Normal"]) .ui5-label-root {
+	white-space: normal;
 }
 
 :host(:not([wrapping-type="Normal"])) .ui5-label-root {
-	font-weight: inherit;
 	display: inline-block;
 	white-space: nowrap;
-	cursor: inherit;
 	overflow: hidden;
 }
 
